# cat_and_dog_birthdays_backend

./: db.sqlite3  manage.py  pyproject.toml
birthdays/: api.py  models.py  schema.py
birthdays/management/commands/: ingest_birthdays.py
birthdays/migrations/: 0001_initial.py
cat_and_dog_birthdays/: asgi.py  settings.py  urls.py  wsgi.py
data/: cat_birthdays.json  dog_birthdays.json
